--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         </section>
     </div>
     <footer>
+        <nav role:="navigation"/>
         <div class="wrapper">
             <div class="third">
                 <ul>
@@ -93,21 +94,15 @@
             </div>
             <div class="third last">
                 <ul>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                    <li>Item</li>
-                </ul>
-                <p>&copy; ProjectExplorer.org 2003&ndash;current</p>
-                <p>All rights reserved</p>
-                <ul class="social">
-                    <li>Facebook</li>
-                    <li>Twitter</li>
+                    <li href="https://www.facebook.com/" target="_blank" title="Facebook">Facebook</li>
                     <li>Vimeo</li>
                     <li>Google+</li>
+                    <li>Twitter</li>
+                    <li>Item</li>
+                    <li>Item</li>
                 </ul>
+                <p><nav> <a>&copy; ProjectExplorer.org 2003 &dash;current</p>
+                <p>All rights reserved</p></a></nav>
             </div>
             <hr class="clearfix" />
         </div>
